name:                esqueleto-bug
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/esqueleto-bug#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable esqueleto-bug
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  GADTs, GeneralizedNewtypeDeriving, MultiParamTypeClasses, OverloadedStrings, TemplateHaskell, TypeFamilies, QuasiQuotes, ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5, monad-logger, persistent, persistent-postgresql, persistent-template, esqueleto, transformers
